JAVA-38432 Review add-opens and add-exports in modules - Week 34 - 2024